--- a/1-18042022/index.html
+++ b/1-18042022/index.html
@@ -8,5 +8,11 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+    <button onclick="bemvindo()"> Bem Vindo </button>
+    <button onclick="operacoescomdiv()"> Operações </button>
+
+    <div id="saida" onmouseover="tamanhodiv()" onmouseout="tamanhodiv1()"></div>
+    <div class="saida"></div>
+    <div></div>
 </body>
 </html>
